Fix up gifwrap

--- a/Awful/Assets/Forums/css/gifwrap.css
+++ b/Awful/Assets/Forums/css/gifwrap.css
@@ -1,4 +1,8 @@
-﻿.gifWrap.overlay {
+﻿.gifWrap {
+    cursor: pointer;
+}
+
+.gifWrap.overlay {
     position: relative;
     display: inline-block;
 }
@@ -7,7 +11,7 @@
         content: "GIF";
         display: block;
         background-color: rgba(255, 255, 255, 0.5);
-        background-image: url('play-button.png');
+        background-image: url('ms-appx-web:///Assets/Forums/play-button.png');
         background-size: .85em;
         background-repeat: no-repeat;
         background-position: right 5px center;
@@ -15,19 +19,18 @@
         height: 1.35em;
         margin: auto;
         position: absolute;
-        width: 1.75em;
+        width: 3.15em;
         top: 0;
         left: 0;
         bottom: 0;
         right: 0;
-        padding: .25em;
         padding-right: 1.25em;
         border-radius: .125em;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
     }
 
     .gifWrap.overlay.loading:before {
-        background-image: url('spinner-button.png');
+        background-image: url('ms-appx-web:///Assets/Forums/spinner-button.png');
     }
 
     .gifWrap.overlay.playing:before {
